--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="layer">
                         <h3>SPOTIFY CLONE</h3>
                         <p>This is spotify clone</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://basantmishra88.github.io/spotify_clone/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -142,7 +142,7 @@
                     <div class="layer">
                         <h3>COLOR GENERATOR</h3>
                         <p>This is simple color generator web page</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://basantmishra88.github.io/color_generator/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -160,7 +160,7 @@
                     <div class="layer">
                         <h3>QUIZ APP</h3>
                         <p> This is simple quiz app</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://basantmishra88.github.io/quiz_app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
